--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 123456
-    url: jdbc:mysql://localhost:3306/dj_school?characterEncoding=UTF-8&useOldAliasMetadataBehavior=true&useSSL=false
+    url: jdbc:mysql://localhost:3306/dj_school?serverTimezone=Asia/Shanghai
   mvc:
     view:
       prefix: /WEB-INF/page # 页面前缀
